[tool.poetry]
name = "Nerdz Vision"
version = "0.1.0"
description = "A Streamlit app with Groq Vision and Chat capabilities."
authors = ["Ataliba Miguel <ataliba.miguel@valonylabs.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"